--- a/style/style.css
+++ b/style/style.css
@@ -45,10 +45,11 @@ body {
   flex-direction: column;
   min-height: 100%;
   margin: 0;
+  margin-top: 17px;
   font-family: "Rubik", sans-serif;
+  font-style: normal;
   font-size: 18px;
   line-height: 30px;
-  font-style: normal;
   font-weight: 400;
   color: #444444;
   background-color: #FFFFFF;
@@ -67,19 +68,21 @@ body {
 }
 
 .raleway-title {
+  margin: 0;
   font-family: "Raleway", sans-serif;
+  font-style: normal;
   font-size: 50px;
   line-height: 50px;
-  font-style: normal;
   font-weight: 800;
   color: #000000;
 }
 
 .button {
+  display: block;
   font-family: "Raleway", sans-serif;
+  font-style: normal;
   font-size: 18px;
   line-height: 21px;
-  font-style: normal;
   font-weight: 800;
   text-align: center;
   letter-spacing: 0.2em;
@@ -90,7 +93,7 @@ body {
   border: 0;
 }
 
-/* .visually-hidden {
+.visually-hidden {
   position: absolute;
   width: 1px;
   height: 1px;
@@ -101,7 +104,7 @@ body {
   clip-path: inset(100%);
   clip: rect(0 0 0 0);
   overflow: hidden;
-} */
+}
 
 .page-container {
   width: 1160px;
@@ -114,48 +117,231 @@ body {
 
 /* index-page */
 
+/* header общие стили */
+
 .main-header {
+  display: grid;
+  grid-template-columns: repeat(2, 520px);
+  grid-template-areas:
+    "logo        .       "
+    "search-form user-nav"
+    "site-nav    site-nav";
+  column-gap: 18px;
+  row-gap: 30px;
+  padding: 0 60px;
   color: #000000;
   background-color: #FFFFFF;
+  background-image: linear-gradient(#FFFFFF 23px,#FFE17F 23px);
 }
 
-.search-form {
+/* первый ряд header логотип девайс */
+
+.header-logo {
+  grid-area: logo;
+}
+
+/* второй ряд header форма поиска и меню пользователя */
+
+.header-search-form {
+  grid-area: search-form;
+  display: flex;
+  width: 520px;
   font-family: inherit;
+  font-style: normal;
   font-size: 16px;
   line-height: 20px;
-  font-style: normal;
   font-weight: 400;
 }
 
 .search-form-input {
+  width: 360px;
+  margin-right: -2px;
+  padding: 8px 44px;
   font: inherit;
+  align-items: center;
+  color: #000000;
+  background-color:  #FFE17F;
+  border: 2px solid #000000;
+  border-radius: 50px 0px 0px 50px;
+}
+
+.search-form-input::placeholder {
+  color: #000000;
 }
 
 .search-form-button {
+  width: 160px;
+  padding: 8px;
   font: inherit;
   text-align: center;
+  background-color:  #FFE17F;
+  border: 2px solid #000000;
+  border-radius: 0px 50px 50px 0px;
+}
+
+.user-navigation {
+  grid-area: user-nav;
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+  width: 520px;
+}
+
+.user-navigation-item:not(:last-child) {
+  margin-right: 12px;
+}
+
+.user-navigation-compare {
+  margin-left: auto;
 }
 
 .user-navigation-link {
+  display: block;
+  padding: 5px 18px 5px 32px;
   text-decoration: none;
   color: #000000;
+}
+
+/* третий ряд header каталог и меню сайта */
+
+.site-navigation {
+  grid-area: site-nav;
+}
+
+.site-navigation-list {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+}
+
+.site-navigation-item:not(:last-child) {
+  margin-right: 16px;
+}
+
+.site-navigation-item:first-child {
+  margin-right: auto;
+}
+
+.site-navigation-link {
+  display: block;
+  padding: 15px;
+}
+
+.header-catalog-button {
+  padding-left: 0;
 }
 
 .header-catalog-link {
+  display: block;
   text-decoration: none;
   color: #000000;
 }
 
+/* main-index */
+
+.main-index {
+  margin-top: -14px;
+}
+
 /* slider */
+
+.slider {
+  position: relative;
+  margin-bottom: 70px;
+}
+
+.slide-list {
+  color: #444444;
+  background-image: linear-gradient(#FFE17F 150px,#FFFFFF 150px);
+}
+
+.slide-item {
+  display: flex;
+  justify-content: space-between;
+}
+
+.slide-item-description {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  width: 560px;
+  padding-top: 122px;
+}
+
+.slide-slogan {
+  margin-bottom: 29px;
+}
+
+.slide-text {
+  margin: 0;
+  margin-bottom: 50px;
+}
+
+.slide-button {
+  width: 220px;
+  min-height: 40px;
+  margin-bottom: 30px;
+  padding: 10px 5px;
+}
+
+.slide-description {
+  display: grid;
+  grid-template-columns: repeat(3, auto);
+  column-gap: 20px;
+}
+
+.slide-description-wrapper {
+  display: flex;
+  align-items: flex-start;
+  flex-direction: column-reverse;
+}
 
 .slide-description-property {
   font-size: 16px;
 }
 
 .slide-description-value {
+  margin: 0;
+  margin-bottom: 12px;
   font-size: 36px;
   line-height: 30px;
   color: #000000;
+}
+
+/* slider-control - навигация по слайдам */
+
+.slider-control {
+  position: absolute;
+  top: 170px;
+  left: 10px;
+  display: flex;
+  justify-content: space-between;
+  width: 530px;
+}
+
+.slider-control-button {
+  width: 20px;
+}
+
+.slider-pagination {
+  position: absolute;
+  top: 340px;
+  left: 1060px;
+  display: flex;
+  justify-content: space-between;
+  width: 76px;
+}
+
+/* catalog */
+
+.catalog {
+  margin-bottom: 82px;
+}
+
+.catalog-list {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, 160px);
+  column-gap: 40px;
 }
 
 .catalog-item-link {
@@ -164,20 +350,146 @@ body {
 }
 
 .catalog-title {
+  margin: 0;
   font-family: "Raleway", sans-serif;
+  font-style: normal;
   font-size: 18px;
   line-height: 24px;
-  font-style: normal;
   font-weight: 800;
   letter-spacing: -0.02em;
 }
 
-.delivery-link {
+.catalog-title::before {
+  display: block;
+  content: "";
+  width: 160px;
+  height: 160px;
+  margin-bottom: 33px;
+  color: #000000;
+  background-color: #FFE17F;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: auto;
+}
+
+.catalog-title-vr::before {
+  background-image: url("../images/icon/vr.svg");
+}
+
+.catalog-title-monopod::before {
+  background-image: url("../images/icon/monopod.svg");
+  background-position: center bottom;
+}
+
+.catalog-title-camera::before {
+  background-image: url("../images/icon/camera.svg");
+}
+
+.catalog-title-fitness::before {
+  background-image: url("../images/icon/fitness-bracelet.svg");
+}
+
+.catalog-title-watch::before {
+  background-image: url("../images/icon/watch.svg");
+}
+
+.catalog-title-quadrocopter::before {
+  background-image: url("../images/icon/quadrocopter.svg");
+}
+
+/* advantages - преимущества */
+
+.advantages {
+  position: relative;
+  margin-bottom: 70px;
+  color: #444444;
+  background-image: linear-gradient(#FFFFFF 102px,#F0F0F0 102px);
+}
+
+.advantages-container {
+  display: flex;
+  min-height: 319px;
+}
+
+.advantages-pagination {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  width: 287px;
+  padding: 64px 0;
+}
+
+.advantages-pagination-item:not(:last-child) {
+  margin-bottom: 34px;
+}
+
+.advantages-button {
+  width: 160px;
+  min-width: 160px;
+  padding: 10px 4px;
+}
+
+.advantages-list {
+  width: 873px;
+  min-height: 391px;
+  padding: 73px 250px 73px 116px;
+}
+
+.advantage-title {
+  margin-bottom: 34px;
+}
+
+.advantage-text {
+  margin: 0;
+}
+
+/* delivery - блок доставки */
+
+.delivery {
+  min-height: 100px;
+  margin-bottom: 70px;
+  color: #000000;
+  background-color: #F0F0F0;
+}
+
+.delivery-button {
+  display: block;
+  padding: 41px 125px 36px 130px;
   font-size: 20px;
   line-height: 23px;
 }
 
+/* блокии о нас и контакты - сетка */
+
+.about-wrappen {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 68px;
+  padding-top: 48px;
+}
+
+.about {
+  width: 520px;
+}
+
+.contacts {
+  width: 532px;
+}
+
+.about-title,
+.contacts-title {
+  margin-bottom: 48px;
+}
+
+.about-text,
+.contacts-text {
+  margin: 0;
+  margin-bottom: 30px;
+}
+
 .about-delivery-list {
+  margin-bottom: 30px;
+  padding-left: 36px;
   font-size: 18px;
   line-height: 20px;
   font-weight: 700;
@@ -185,56 +497,185 @@ body {
   color: #000000;
 }
 
+.about-delivery-item:not(:last-child) {
+  margin-bottom: 19px;
+}
+
+.button-about {
+  width: 270px;
+  min-height: 40px;
+  padding: 10px 6px;
+}
+
 .contacts-subtitle {
+  margin: 0;
+  margin-bottom: 15px;
   font-size: 24px;
   line-height: 30px;
   font-weight: 700;
 }
 
 .contacts-address {
+  margin-bottom: 30px;
   font-style: normal;
 }
 
-.contacts-address-tel {
-  text-decoration: none;
-  color: #000000;
+.contacts-address-text {
+  margin: 0;
 }
 
+.contacts-address-tel {
+  margin: 0;
+  text-decoration: none;
+  color: #444444;
+}
+
+.contacts-schedule {
+  margin-bottom: 30px;
+}
+
+.button-contact {
+  width: 260px;
+  min-height: 40px;
+  padding: 10px 6px;
+}
+
+/* блок с подпиской */
+
 .subscribe {
+  padding-top: 65px;
+  padding-bottom: 55px;
   color: #444444;
   background-color: #F0F0F0;
 }
 
+.subscribe-row {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.subscribe-row:not(:last-child) {
+  margin-bottom: 144px;
+}
+
+.subscribe-title {
+  width: 416px;
+  margin: 0 7px;
+}
+
+.subscribe-text {
+  width: 550px;
+  margin: 0;
+  margin-top: 10px;
+}
+
+.subscribe-form {
+  display: flex;
+  width: 810px;
+}
+
 .subscribe-form-input {
+  width: 557px;
   font-family: inherit;
+  font-style: normal;
   font-size: 16px;
   line-height: 20px;
-  font-style: normal;
   font-weight: 400;
 }
 
+.subscribe-form-button {
+  width: 223px;
+  padding: 18px 39px;
+}
+
+.subscribe-form-info {
+  width: 164px;
+  margin: 0;
+  padding-left: 36px;
+}
+
+/* main-footer */
+
 .main-footer {
+  min-height: 321px;
+  padding: 62px 0;
   color: #FFFFFF;
   background-color: #444444;
 }
 
-.footer-address-text {
+.main-footer-wrappen {
+  display: grid;
+  grid-template-columns: 240px 468px 240px;
+  grid-template-areas:
+    "logo    .          .        "
+    "address footer-nav telephone"
+    ".       social     partner  ";
+  column-gap: 106px;
+  row-gap: 30px;
+}
+
+.footer-logo {
+  grid-area: logo;
+}
+
+.footer-address {
+  grid-area: address;
+  margin: 0;
+  padding: 5px 0;
   font-size: 16px;
   line-height: 20px;
+}
+
+.footer-navigation {
+  grid-area: footer-nav;
+  display: flex;
+  flex-wrap: wrap;
+  margin-bottom: 20px;
+}
+
+.footer-navigation-item:not(:last-child) {
+  margin-right: 22px;
 }
 
 .footer-navigation-link {
+  display: block;
+  padding: 10px 5px;
   color: #FFFFFF;
 }
 
-.button-social {
-  text-decoration: none;
-  color: #FFFFFF;
-}
-
-.footer-address-tel {
+.footer-telephone {
+  grid-area: telephone;
+  justify-self: end;
+  padding: 10px 4px;
   font-size: 16px;
   line-height: 20px;
   text-decoration: none;
   color: #FFFFFF;
+}
+
+.footer-social {
+  grid-area: social;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+
+.footer-social-item:not(:last-child) {
+  margin-right: 15px;
+}
+
+.button-social {
+  display: block;
+  width: 40px;
+  height: 40px;
+  text-decoration: none;
+  color: #FFFFFF;
+  background-color: #FFFFFF;
+}
+
+.logo-partner {
+  grid-area: partner;
+  justify-self: end;
+  padding: 4px 0;
 }
