--- a/style/style.css
+++ b/style/style.css
@@ -787,6 +787,8 @@ body {
   background-position: center;
 }
 
+/* стили тултипа */
+
 .delivery-tooltip {
   position: absolute;
   top: 0;
@@ -806,6 +808,40 @@ body {
 
 .delivery-tooltip-img {
   opacity: 0.3;
+}
+
+.delivery-tooltip-text {
+  z-index: 1;
+  position: absolute;
+  top: 80px;
+  right: 15px;
+  display: none;
+  width: 200px;
+  min-height: 160px;
+  padding: 19px;
+  font-size: 16px;
+  line-height: 20px;
+  color: #FFFFFF;
+  background-color: #000000;
+  box-shadow: 0px 10px 0px rgba(0, 0, 0, 0.1);
+}
+
+.delivery-tooltip-text::before {
+  position: absolute;
+  top: -6px;
+  right: 40px;
+  content: "";
+  width: 14px;
+  height: 6px;
+  background-image: url("../images/icon/arrow.svg");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: contain;
+}
+
+.delivery-tooltip-button:hover + .delivery-tooltip-text,
+.delivery-tooltip-button:focus + .delivery-tooltip-text {
+  display: block;
 }
 
 /* блокии о нас и контакты */
@@ -1717,6 +1753,8 @@ body {
   color: #FF3D3D;
 }
 
+/* оформление тултипа */
+
 .modal-tooltip {
   position: absolute;
   top: -4px;
@@ -1728,6 +1766,40 @@ body {
   height: 26px;
   background-color: #FFE17F;
   border-radius: 50%;
+}
+
+.modal-tooltip-text {
+  z-index: 1;
+  position: absolute;
+  top: 37px;
+  right: -34px;
+  display: none;
+  width: 200px;
+  min-height: 160px;
+  padding: 19px;
+  font-size: 16px;
+  line-height: 20px;
+  color: #FFFFFF;
+  background-color: #000000;
+  box-shadow: 0px 10px 0px rgba(0, 0, 0, 0.1);
+}
+
+.modal-tooltip-text::before {
+  position: absolute;
+  top: -6px;
+  right: 40px;
+  content: "";
+  width: 14px;
+  height: 6px;
+  background-image: url("../images/icon/arrow.svg");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: contain;
+}
+
+.modal-tooltip-button:hover + .modal-tooltip-text,
+.modal-tooltip-button:focus + .modal-tooltip-text {
+  display: block;
 }
 
 .button-input {
